# motion-detector

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/core/: detector.cpp  detector.hpp  recorder.cpp  recorder.hpp
